--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -78,6 +78,7 @@
   display: inline-block;
   align-self: flex-start;
   margin: 7px 0 0 0;
+  cursor: pointer;
 }
 .header__links-sublist {
   visibility: hidden;
@@ -95,11 +96,6 @@
   pointer-events: all;
   transform: translateY(5%);
   transition: all .2s linear;
-}
-.header__links-list > .header__link-container:hover .header__links-sublist {
-  visibility: visible;
-  opacity: 1;
-  transform: translateY(0);
 }
 .header__link:hover {
   color: var(--color-primary);
@@ -138,6 +134,14 @@
 }
 .header__button {}
 
+@media screen and (min-width: 1159px) {
+  .header__links-list > .header__link-container:hover .header__links-sublist {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 @media screen and (max-width: 1160px) {
   .header {
     padding: 20px 30px;
@@ -146,11 +150,21 @@
 
 @media screen and (max-width: 1100px) {
   .header {
+    width: 100%;
+  }
+  .header__mobile {
+    display: flex;
     position: fixed;
+    top: 0;
+    left: 0;
     z-index: 9999;
     justify-content: space-between;
+    flex-grow: 1;
+    width: 100%;
+    padding: 20px 30px;
+    box-sizing: border-box;
   }
-  .header::before {
+  .header__mobile::before {
     content: '';
     position: absolute;
     width: 100%;
@@ -160,20 +174,18 @@
     background-color: #fff;
     z-index: 3;
   }
-  .header_opened::before {
+  .header__mobile_opened::before {
     box-shadow: 0px 4px 20px rgba(178, 185, 220, 0.43);
   }
   .header__nav {
-    position: fixed;
-    overflow: hidden;
-    max-height: 100vh;
-    height: 100%;
+    position: absolute;
+    min-height: 100%;
     min-width: 100vw;
     margin: 0;
     background-color: #fff;
     z-index: 2;
-    top: -100%;
-    left: 0;
+    top: 0;
+    left: -100%;
     flex-direction: column;
     justify-content: space-between;
     padding: 160px 0 40px;
@@ -181,19 +193,39 @@
     transition: all .2s linear;
   }
   .header__nav_opened {
-    top: 0;
+    left: 0;
   }
   .header__links-list {
     flex-direction: column;
+  }
+  .header__link-container {
+    display: grid;
+    justify-items: center;
   }
   .header__link {
     font-weight: 600;
     font-size: 20px;
     line-height: 1;
+    display: block;
+    margin: 10px auto 0;
+  }
+  .header__link:first-child{
+    margin: 0 auto;
+  }
+  .header__link_type_menu::after {
+    content: '';
+    display: inline-block;
+    width: 12px;
+    height: 10px;
+    background-image: url('../../images/arrow.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-left: 8px;
   }
   .header__buttons-container {
     justify-content: center;
     flex-direction: column;
+    margin: 60px 0 0;
   }
   .header__button {
     max-width: 300px;
@@ -202,6 +234,15 @@
   }
   .header__socials-container {
     display: flex;
+    margin: 162px 0 0;
+  }
+  .header__links-sublist {
+    box-shadow: none;
+  }
+  .header__links-sublist_opened {
+    position: relative;
+    visibility: visible;
+    opacity: 1;
   }
 }
 
@@ -218,6 +259,7 @@
   .header__logo-subtitle {
     font-size: 8px;
     margin-left: 6px;
+    max-width: 107px;
   }
 }
 
