--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -154,12 +154,11 @@
   }
   .header__mobile {
     display: flex;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: 9999;
     justify-content: space-between;
-    flex-grow: 1;
     width: 100%;
     padding: 20px 30px;
     box-sizing: border-box;
@@ -179,7 +178,7 @@
   }
   .header__nav {
     position: absolute;
-    min-height: 100%;
+    min-height: 100vh;
     min-width: 100vw;
     margin: 0;
     background-color: #fff;
@@ -194,6 +193,8 @@
   }
   .header__nav_opened {
     left: 0;
+    display: block;
+    overflow-y: auto;
   }
   .header__links-list {
     flex-direction: column;
