--- a/pages/index.css
+++ b/pages/index.css
@@ -73,6 +73,8 @@
 
 @import url('../blocks/intro/intro.css');
 
+@import url('../blocks/registration/registration.css');
+
 /* Блок footer*/
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
