feat: добавить страницу telegram

--- a/blocks/confidentiality/confidentiality.css
+++ b/blocks/confidentiality/confidentiality.css
@@ -1,4 +1,7 @@
 .confidentiality {
+  padding: calc(var(--space-primary) + 20px) 0;
+}
+.confidentiality__container {
   max-width: var(--width-max);
   background-size: cover;
   background-repeat: no-repeat;
@@ -7,13 +10,16 @@
   border-radius: 20px;
   width: 100%;
   box-sizing: border-box;
-  margin: calc(var(--space-primary) + 20px) auto;
+  margin: 0 auto;
 }
-.confidentiality_bg_blue {
+.confidentiality__container_bg_orange {
+  background-image: url("../../images/conf.webp");
+}
+.confidentiality__container_bg_blue {
   background-image: url("../../images/recommend-bg.webp");
 }
-.confidentiality_bg_orange {
-  background-image: url("../../images/conf.webp");
+.confidentiality_theme_light {
+  background-color: var(--bg-color-secondary);
 }
 
 .confidentiality__title {
@@ -33,9 +39,8 @@
 }
 
 @media screen and (max-width: 1160px) {
-  .confidentiality {
+  .confidentiality__container {
     padding: 50px 10px;
-    margin: calc(var(--space-primary) * 2) auto 0;
     width: calc(100% - 30px * 2);
     border-radius: 10px;
   }
