--- a/pages/telegram.css
+++ b/pages/telegram.css
@@ -76,4 +76,8 @@
 
 @import url("../blocks/social-intro/social-intro.css");
 
+@import url("../blocks/service-list/service-list.css");
+
+@import url("../blocks/popup/popup.css");
+
 @import url("../blocks/footer/footer.css");
