--- a/blocks/service-list/service-list.css
+++ b/blocks/service-list/service-list.css
@@ -25,7 +25,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  transform: translate(20%, 10%);
+  transform: translate(40%, -50%);
 }
 .service-list__description-list {
   list-style: none;
@@ -104,15 +104,18 @@
 .service-list__button {
   justify-self: center;
 }
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1160px) {
+  .service-list {
+    margin: calc(var(--space-primary) + 20px) 30px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
   .service-list {
     margin: var(--space-primary) auto 0;
   }
   .service-list__title {
     margin: 0 30px 28px;
-  }
-  .service-list__description-subtitle {
-    transform: translate(40%, -50%);
   }
   .service-list__description-list {
     flex-direction: column;
@@ -124,8 +127,10 @@
   .service-list__body {
     border: none;
     display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 360px));
     gap: 16px;
-    padding: 10px 0;
+    justify-content: center;
+    padding: 10px 30px;
   }
   .service-list__body-list {
     list-style: none;
@@ -138,7 +143,7 @@
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     background-color: #fff;
     border-radius: 10px;
-    margin: 0 30px;
+    margin: 0;
     padding: 16px 20px;
     display: grid;
     box-sizing: border-box;
