--- a/blocks/btn/btn.css
+++ b/blocks/btn/btn.css
@@ -5,7 +5,7 @@
   cursor: pointer;
   border-radius: 40px;
   line-height: 1;
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
   text-decoration: none;
   text-align: center;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
