--- a/blocks/long-read/long-read.css
+++ b/blocks/long-read/long-read.css
@@ -1,8 +1,14 @@
+.long-read::-webkit-scrollbar {
+  display: none;
+}
 .long-read {
   display: flex;
   flex-wrap: nowrap;
   padding: 0;
   overflow: auto hidden;
+  animation: long-read 40s linear;
+  -ms-overflow-style: none; /* IE и Edge */
+  scrollbar-width: none; /* Firefox */
 }
 .long-read__section {
   min-width: 582px;
@@ -44,7 +50,7 @@
 }
 
 .long-read__section_type_curve::after {
-  content: "";
+  content: '';
   position: absolute;
   left: 50%;
   bottom: 0;
@@ -108,7 +114,7 @@
 }
 
 .long-read__button::before {
-  content: "";
+  content: '';
   width: 36px;
   height: 36px;
   position: absolute;
@@ -116,7 +122,7 @@
 }
 
 .long-read__button::before {
-  background-image: url("../../images/socials/telegram-icon.svg");
+  background-image: url('../../images/socials/telegram-icon.svg');
   top: -10px;
   right: -10px;
 }
@@ -127,8 +133,8 @@
 
 .long-read__review {
   grid-template-areas:
-    "avatar review"
-    ". name";
+    'avatar review'
+    '. name';
   grid-template-columns: min-content 1fr;
   gap: 16px 20px;
 }
@@ -142,7 +148,7 @@
 
 .long-read__quote::before,
 .long-read__quote::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 0;
   height: 0;
@@ -212,8 +218,8 @@
 
   .long-read__review {
     grid-template-areas:
-      "review review"
-      "avatar name";
+      'review review'
+      'avatar name';
     gap: 34px 16px;
   }
 
