--- a/blocks/service-list/service-list.css
+++ b/blocks/service-list/service-list.css
@@ -48,7 +48,7 @@
 .service-list__headers-list {
   list-style: none;
   display: grid;
-  grid-template-columns: 1fr minmax(150px, 324px) repeat(4, 1fr);
+  grid-template-columns: 80px minmax(150px, 324px) repeat(4, 1fr) 1.5fr;
   justify-items: center;
   margin: 0 0 20px;
   padding: 0;
@@ -77,7 +77,7 @@
 .service-list__body-list {
   list-style: none;
   display: grid;
-  grid-template-columns: 1fr minmax(150px, 324px) repeat(4, 1fr);
+  grid-template-columns: 80px minmax(150px, 324px) repeat(4, 1fr) 1.5fr;
   justify-items: center;
   align-items: center;
   padding: 0;
