--- a/blocks/social-intro/social-intro.css
+++ b/blocks/social-intro/social-intro.css
@@ -9,8 +9,8 @@
 }
 .social-intro::before,
 .social-intro::after {
-  content: "";
-  background-image: url("../../images/bg-social/bg-telegram-head.webp");
+  content: '';
+  background-image: url('../../images/bg-social/bg-telegram-head.webp');
   background-size: cover;
   background-position: center;
   position: absolute;
@@ -67,8 +67,8 @@
   gap: 14px 36px;
   align-items: center;
   grid-template-areas:
-    "title title"
-    "logo count";
+    'title title'
+    'logo count';
   padding: 16px 25px;
   box-sizing: border-box;
 }
@@ -78,7 +78,7 @@
   top: 10%;
 }
 .social-intro__social_pos_up::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 0;
   height: 0;
@@ -94,7 +94,7 @@
   top: 30%;
 }
 .social-intro__social_pos_buttom::after {
-  content: "";
+  content: '';
   position: absolute;
   width: 0;
   height: 0;
