--- a/blocks/long-read/long-read.css
+++ b/blocks/long-read/long-read.css
@@ -2,16 +2,30 @@
   display: none;
 }
 .long-read {
+  padding: 0;
+  position: relative;
+  height: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+  /* min-height: 900px; */
+}
+.long-read__container {
+  position: relative;
   display: flex;
   flex-wrap: nowrap;
-  padding: 0;
-  overflow: auto hidden;
-  animation: long-read 40s linear;
+  overflow: auto;
+  height: 100%;
+  min-height: 100vh;
   -ms-overflow-style: none; /* IE и Edge */
   scrollbar-width: none; /* Firefox */
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  z-index: 10;
 }
 .long-read__section {
   min-width: 582px;
+  justify-content: flex-start;
   display: flex;
   flex-direction: column;
   padding: 170px 40px 170px 0;
@@ -178,8 +192,11 @@
 
 @media screen and (max-width: 700px) {
   .long-read {
+  }
+  .long-read__container {
     flex-direction: column;
     margin-bottom: 40px;
+    min-height: 100%;
   }
 
   .long-read__section {
