--- a/style/new-style.v2.css
+++ b/style/new-style.v2.css
@@ -1734,9 +1734,9 @@ ul {
 }
 
 .fa-vk {
-    color: white;
-    font-size: 20px !important;
-    background-color: black;
+    color: black !important;
+    font-size: 12px !important;
+    background-color: #fff !important;
 }
 
 .btn-blue {
