--- a/blocks/long-read/long-read.css
+++ b/blocks/long-read/long-read.css
@@ -3,32 +3,42 @@
 }
 .long-read {
   padding: 0;
-  position: relative;
+  margin: 0 auto;
+  width: 100%;
   height: 100%;
-  overflow-x: auto;
-  overflow-y: hidden;
-  min-height: 100vh;
   box-sizing: border-box;
+  transition: all 0.2s linear;
 }
 .long-read__container {
-  position: absolute;
   display: flex;
-  align-items: flex-start;
-  flex-wrap: nowrap;
-  overflow: auto;
+  flex-direction: column;
+  align-items: center;
   height: 100%;
+  width: 100%;
   -ms-overflow-style: none; /* IE и Edge */
   scrollbar-width: none; /* Firefox */
   background-color: #fff;
   z-index: 10;
+  transition: all 0.2s ease-out;
+}
+.long-read__subcontainer {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(2, minmax(300px, 560px));
+  gap: 40px;
+  width: 100%;
+}
+.long-read__subcontainer_theme_dark {
+  background-color: var(--bg-color-primary);
 }
 .long-read__section {
-  min-width: 582px;
-  min-height: 380px;
+  width: 100%;
+  min-height: 280px;
   justify-content: center;
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
-  padding: 170px 40px 170px 0;
+  padding: 40px 0;
   overflow: hidden;
 }
 
@@ -36,9 +46,9 @@
   padding-right: 0;
 }
 
-.long-read__section_pos_first {
+/* .long-read__section_pos_first {
   padding-left: 140px;
-}
+} */
 
 .long-read__section_theme_dark {
   background-color: var(--bg-color-primary);
@@ -82,7 +92,7 @@
 
 .long-read__subtitle {
   color: var(--color-semi-dark);
-  margin: 0;
+  margin: 0 auto;
 }
 
 .long-read__image {
@@ -192,6 +202,20 @@
   justify-self: end;
 }
 
+@media screen and (max-width: 1190px) {
+  .long-read {
+  }
+  .long-read__subcontainer {
+    grid-template-columns: 100%;
+  }
+  .long-read__section {
+    align-items: center;
+  }
+  .long-read__text {
+    margin: 16px 30px 0;
+    font-size: 14px;
+  }
+}
 @media screen and (max-width: 700px) {
   .long-read {
   }
